data/derived/sp14/progs/unify/prog0347.ml.out
Characters 88-106:
  | Average (x', y') -> (eval (VarX, x', y) + eval (VarY, x, y'))/2;;
                         ^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         int
